Update package.json to use arbitrumSepolia network

--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "faucet",
   "version": "1.0.0",
-  "description": "Sepolia Testnet Faucet for ETH and custom ERC20 tokens",
+  "description": "Arbitrum Sepolia Testnet Faucet for ETH and 777 tokens",
   "main": "index.js",
   "scripts": {
     "test": "hardhat test",
     "compile": "hardhat compile",
-    "deploy:faucet": "hardhat run scripts/deploy_faucet.js --network sepolia",
-    "deploy:relayer": "hardhat run scripts/deploy_relayer.js --network sepolia",
+    "deploy:faucet": "hardhat run scripts/deploy_faucet.js --network arbitrumSepolia",
+    "deploy:relayer": "hardhat run scripts/deploy_relayer.js --network arbitrumSepolia",
     "deploy:local": "hardhat run scripts/deploy_faucet.js --network localhost",
     "deploy:local:relayer": "hardhat run scripts/deploy_relayer.js --network localhost",
-    "deposit:dai": "hardhat run scripts/deposit-dai.js --network sepolia",
+    "deposit:777": "hardhat run scripts/deposit-777.js --network arbitrumSepolia",
     "node": "hardhat node",
     "serve": "node scripts/serve-frontend.js",
-    "relayer": "hardhat run scripts/run_relayer_simple.js --network sepolia",
+    "relayer": "hardhat run scripts/run_relayer_simple.js --network arbitrumSepolia",
     "relayer:local": "hardhat run scripts/run_relayer_simple.js --network localhost"
   },
   "keywords": [],
