--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "node": "hardhat node",
     "serve": "node scripts/serve-frontend.js",
     "relayer": "hardhat run scripts/run_relayer_simple.js --network arbitrumSepolia",
-    "relayer:local": "hardhat run scripts/run_relayer_simple.js --network localhost"
+    "relayer:local": "hardhat run scripts/run_relayer_simple.js --network localhost",
+    "relayer:telegram": "node ./src/telegram/bot.js"
   },
   "keywords": [],
   "author": "",
@@ -26,8 +27,10 @@
     "hardhat": "^2.22.19"
   },
   "dependencies": {
-    "express": "^4.18.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.2"
+    "express": "^4.18.3",
+    "grammy": "^1.38.3",
+    "pg": "^8.16.3"
   }
 }
