revoked and refreshed token

--- a/.env.example
+++ b/.env.example
@@ -13,4 +13,5 @@ ARBISCAN_API_KEY=your_etherscan_api_key_here
 # ERC20 token address to use for the faucet
 TOKEN_ADDRESS=your_erc20_token_address_here
 
+TELEGRAM_BOT_TOKEN=your_bot_token
 # Note: Keep this file private and never commit it to version control
