feat: Make database connection configurable via environment variable
- Replace hardcoded database URL in bot.js line 61 with DATABASE_URL env variable
- Add DATABASE_URL to .env.example for documentation
- Provide fallback value for backward compatibility
- Fix typo in original connection string (remove duplicate =disabled)

This allows users to configure their database connection without modifying code.

--- a/.env.example
+++ b/.env.example
@@ -14,4 +14,8 @@ ARBISCAN_API_KEY=your_etherscan_api_key_here
 TOKEN_ADDRESS=your_erc20_token_address_here
 
 TELEGRAM_BOT_TOKEN=your_bot_token
+
+# Database connection URL for PostgreSQL
+DATABASE_URL=postgres://postgres:postgres@localhost:5433/casino_faucet?sslmode=disable
+
 # Note: Keep this file private and never commit it to version control
