fix: Rename hardhat.config.js to hardhat.config.cjs for ESM compatibility
- Rename hardhat.config.js to hardhat.config.cjs to resolve HH19 error
- Update package-lock.json and package.json from npm install
- This fixes the module system compatibility issue with ESM project

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Arbitrum Sepolia Testnet Faucet for ETH and 777 tokens",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "hardhat test",
     "compile": "hardhat compile",
