feat: Add Docker deployment configuration and documentation
- Add Dockerfile for containerized deployment
- Add docker-compose.yml for full application stack
- Add .dockerignore to optimize Docker builds
- Add .env.docker for Docker environment variables
- Add DEPLOYMENT.md with deployment instructions
- Update .env.example with additional configuration options

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Sepolia testnet RPC URL (from Infura, Alchemy, etc.)
 SEPOLIA_URL=https://sepolia.infura.io/v3/YOUR_INFURA_KEY
 
+# Arbitrum Mainnet RPC URL for balance validation
+ARBITRUM_MAINNET_RPC=https://arb1.arbitrum.io/rpc
+
 # Private key of the account used for deployment (without 0x prefix)
 PRIVATE_KEY=your_private_key_here
 
